// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React custom wrapper 1`] = `
<div>
  <section
    class="section-css"
    id="svelte-react"
    style="border: 1px solid gray;"
  >
    <main
      class="svelte-4hq7sh"
    >
      <h1
        class="svelte-4hq7sh"
      >
        Hello 
        ben
        !
      </h1>
       
      <button>
        add count: 
        0
      </button>
       
      <button>
        update name: 
        ben
      </button>
    </main>
  </section>
</div>
`;

exports[`React should render 1`] = `
<div>
  <div
    id="svelte-wrapper"
  >
    <main
      class="svelte-4hq7sh"
    >
      <h1
        class="svelte-4hq7sh"
      >
        Hello 
        ben
        !
      </h1>
       
      <button>
        add count: 
        0
      </button>
       
      <button>
        update name: 
        ben
      </button>
    </main>
  </div>
</div>
`;
